css/song.scss
/* ... */
.artist-wrapper {
    background-color: $neutral-dark;
    padding: 5rem;
    overflow: hidden;
    img {
        width: 100%;
    }
    h1 {
        color: $neutral-lightest;
        font-weight: 700;
        font-size: 1.25rem;
        text-transform: uppercase;
    }
    .title {
        font-size: 3rem;
    }
    .map-wrapper {
        position: relative;
        max-width: 105rem;
        margin: 0 auto;
        .flag {
            width: 5rem;
            position: absolute;
            transform: translateY(-2000px);
            &:nth-child(2) {
                top: 20%;
                left: 14%;
            }
            &:nth-child(3) {
                top: 9%;
                left: 39%;
            }
            &:nth-child(4) {
                top: 11%;
                left: 43.5%;
            }
            &:nth-child(5) {
                top: 31%;
                left: 7%;
            }
            &:nth-child(6) {
                top: 12%;
                left: 13%;
            }
            &:nth-child(7) {
                top: 17%;
                left: 41%;
                z-index: 1;
            }
            &:nth-child(8) {
                top: 69%;
                left: 86%;
            }
            &:nth-child(9) {
                top: 13%;
                left: 41%;
                z-index: 0;
            }
            &:nth-child(10) {
                top: 17%;
                left: 45%;
            }
        }
    }
    .map-info {
        max-width: 60rem;
        margin: 4rem auto 0 auto;
        p {
            border-bottom: 1px solid $neutral-medium;
            padding: 0.5rem 0;
            color: $neutral-lightest;
            margin: 0;
            span {
                float: right;
            }
            @media (min-width: 768px) {
                padding: 1.5rem 3rem;
                &:first-child {
                    border-top: 1px solid $neutral-medium;
                }
            }
        }
        .border-main {
            border-top: 1px solid $neutral-medium;
        }
        @media (min-width: 768) {
            .border {
                border-top: 1px solid $neutral-medium;
            }
        }
        &:last-child {
            margin-top: 0;
            @media (min-width: 768) {
                margin-top: 4rem;
            }
        }
    }
    .row {
        @media (min-width: 992) {
            padding-top: 8rem;
        }
        h1 {
            font-size: 1.6rem;
            padding-top: 8rem;
            padding-bottom: 2rem;
            @media (min-width: 992) {
                padding-top: 0;
            }
        }
        .full-header {
            padding-left: 1.5rem;
        }
    }
}

.cd-timeline-content {
    h2 {
        font-size: 1.6rem;
    }
}

.release-wrapper {
    h1 {
        font-size: 3rem;
        text-transform: uppercase;
        font-weight: 700;
        width: 90%;
        max-width: 1170px;
        margin: 0 auto;
        padding: 8rem 2rem 2rem 6rem;
        text-align: center;
    }
    > p {
        max-width: 60rem;
        margin: 0 auto;
    }
}

.bpm-wrapper {
    background: $primary-color;
    padding: 5rem 0;
    text-align: center;
    img {
        max-width: 18rem;
        width: 35%;
    }
    h1 {
        color: $white;
        max-width: 60rem;
        margin: 0 auto;
        @media (min-width: 992px) {
            margin-top: 6rem;
        }
    }
    p {
        color: $white;
        text-align: left;
        max-width: 60rem;
        margin: 1rem auto 0 auto;
    }
    .label-wrapper {
        width: 50%;
        margin: 2rem auto 0 auto;
        position: relative;
        @media (min-width: 585px) {
            position: static;
            display: inline-block;
            vertical-align: middle;
            margin-left: -5px;
            margin-top: 0;
        }
    }
    .overview-label {
        background: $neutral-lightest;
        padding: 1.3rem 1rem 1rem 1rem;
        display: block;
        top: 0;
        position: relative;
        left: -250%;
        box-shadow: $box-shadow;
        box-sizing: border-box;
        transform-origin: 0 50%;
        &:last-child {
            margin-bottom: 0;
        }
    }
    #low-bpm,
    #avg-bpm,
    #high-bpm {
        -webkit-transform: scale( 0);
        -moz-transform: scale( 0);
        -o-transform: scale( 0);
        -ms-transform: scale( 0);
        transform: scale( 0);
    }
}

.bpm-ind {
    margin-top: 6rem;
    @media (min-width: 768px) {
        margin-bottom: 2rem;
        margin-top: 0;
    }
}

.word-wrapper {
    background: $neutral-dark;
    padding: 5rem 7rem;
    h1,
    p {
        max-width: 60rem;
        margin: 0 auto;
        color: $neutral-lightest;
    }
    p {
        margin-bottom: 4rem;
    }
    a {
        color: $primary-color;
    }
    img {
        max-width: 100rem;
        margin: 0 auto;
        display: block;
        width: 100%;
    }
}

.summary-wrapper {
    padding: 7rem 5rem;
}

.summary {
    max-width: 60rem;
    margin: 0 auto;
}

.playlist-wrapper {
    padding: 7rem 5rem;
    background: $neutral-dark;
    color: $neutral-lightest;
    a {
        color: $primary-color;
    }
    p {
        margin-bottom: 2rem;
    }
    iframe {
        width: 80%;
        min-width: 280px;
    }
}

.playlist-max {
    max-width: 100rem;
    margin: 0 auto;
}

.btn-reveal {
    width: 100%;
    border-radius: 0;
    padding: 1.5rem;
    background: $primary-color;
    font-family: 'Poppins', 'Helvetica', sans-serif;
    font-size: 2.4rem;
    text-transform: uppercase;
    font-weight: 700;
    color: $neutral-dark;
    ;
    margin-top: 3rem;
    margin-bottom: 3rem;
    &:hover,
    &:focus,
    &:active {
        color: $neutral-dark;
    }
    &:hover {
        background: darken($primary-color, 3%);
    }
}

#songReveal a {
    color: $primary-color;
}

.resources h1 {
    margin-top: 4rem;
    @media (min-width: 768px) {
        margin-top: 0;
    }
}
/* ... */

